<resources>
    <string name="app_name">Money Saver</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="category">Category</string>
    <string name="report">Report</string>
    <string name="limit">Limit</string>
    <string name="balance_name">Balance Name</string>
    <string name="new_account_balance">New Account Balance</string>
    <string name="edit_account_balance">Edit Account Balance</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="spn_category_title">Account Balance Type</string>
    <string name="cash">Cash</string>
    <string name="balance_amount">Initial Balance Amount</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>
    <string name="email_error">enter a valid email address</string>
    <string name="name_error">at least 3 characters</string>
    <string name="creating_account">Creating Account...</string>
    <string name="bank_account">Bank Account</string>
    <string name="limit_amount">Limit Amount</string>
    <string name="limit_name">Expense Category</string>
    <string name="new_limit_balance">New expense limit</string>
    <string name="edit_limit_balance">Edit expense limit</string>
    <string name="spn_limit_title">Expense Category</string>
    <string name="new_category_income">New Income Category</string>
    <string name="edit_category_income">Edit Income Category</string>
    <string name="edit_category_expense">Edit Expense Category</string>
    <string name="new_category_expense">New Expense Category</string>
    <string name="new_category_income_recurring">New Recurring Income Category</string>
    <string name="edit_category_income_recurring">Edit Recurring Income Category</string>
    <string name="new_category_expense_recurring">New Recurring Expense Category</string>
    <string name="edit_category_expense_recurring">Edit Recurring Expense Category</string>
    <string name="select_date">Select Date</string>
    <string name="spn_recurring_title">Recurring Duration</string>
    <string name="delete_item">Delete Item?</string>
    <string name="yes_delete">Yes,Delete</string>
    <string name="note">Note</string>
    <string name="edit_transaction_income">Edit income transaction</string>
    <string name="transaction_name">Transaction name</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="spn_transaction_category_title">Transaction category</string>
    <string name="transaction_date">Transaction date</string>
    <string name="new_transaction_income">New income transaction</string>
    <string name="all">All</string>
    <string name="loan">Loan</string>
    <string name="borrow">Borrow</string>
    <string name="expense">Expense</string>
    <string name="edit_transaction_borrow">Edit borrow transaction</string>
    <string name="new_transaction_borrow">New borrow transaction</string>
    <string name="edit_transaction_expense">Edit expense transaction</string>
    <string name="new_transaction_expense">New expense transaction</string>
    <string name="edit_transaction_loan">Edit loan transaction</string>
    <string name="new_transaction_loan">New loan transaction</string>
    <string name="partner">Partner</string>
    <string name="week_report">Transaction in last week</string>
    <string name="week_transaction">Last week transaction</string>
    <string name="transaction">Transaction</string>
    <string name="logout">Logout</string>
    <string name="income_recurring">Recurring Income</string>
    <string name="expense_recurring">Recurring expense</string>
</resources>
