<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_txt_transaction_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_transaction_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_txt_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_amount"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_txt_transaction_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_transaction_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <com.k22.nhom1.moneysaver.component.LabelledSpinner
            android:id="@+id/spn_transaction_balance"
            custom:labelText="@string/balance_name"
            custom:widgetColor="@color/colorAccent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/balance_name" />

        <com.k22.nhom1.moneysaver.component.LabelledSpinner
            android:id="@+id/spn_transaction_category"
            custom:labelText="@string/spn_transaction_category_title"
            custom:widgetColor="@color/colorAccent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spn_transaction_category_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/transaction_date"
                android:cropToPadding="true"
                android:src="@drawable/ic_calendar" />

            <EditText
                android:id="@+id/txt_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnSelectDate"
                android:enabled="false"
                android:hint="To Date"
                android:inputType="date" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_txt_transaction_partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_transaction_partner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/partner"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnSelectReturnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/transaction_date"
                android:cropToPadding="true"
                android:src="@drawable/ic_calendar" />

            <EditText
                android:id="@+id/txt_transaction_return_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnSelectReturnDate"
                android:enabled="false"
                android:hint="To Date"
                android:inputType="date" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
