<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_balance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_txt_balance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_balance_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance_name"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <com.k22.nhom1.moneysaver.component.LabelledSpinner
        android:id="@+id/spn_category"
        custom:labelText="@string/spn_category_title"
        custom:widgetColor="@color/colorAccent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spn_category_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_txt_balance_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_balance_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/balance_amount"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>